xee-xpath/src/interpreter/snapshots/xee_xpath__interpreter__ir_interpret__tests__for_loop.snap
---
source: xee-xpath/src/interpreter/ir_interpret.rs
expression: "run(\"for $x in 1 to 5 return $x + 2\")"
---
Ok(
    Many(
        [
            Atomic(
                Integer(
                    Integer,
                    3,
                ),
            ),
            Atomic(
                Integer(
                    Integer,
                    4,
                ),
            ),
            Atomic(
                Integer(
                    Integer,
                    5,
                ),
            ),
            Atomic(
                Integer(
                    Integer,
                    6,
                ),
            ),
            Atomic(
                Integer(
                    Integer,
                    7,
                ),
            ),
        ],
    ),
)
