xee-xpath/src/interpreter/snapshots/xee_xpath__interpreter__ir_interpret__tests__function_closure.snap
---
source: xee-xpath/src/interpreter/ir_interpret.rs
expression: "run(\"function() { let $x := 3 return function() { $x + 2 } }()()\")"
---
Ok(
    Item(
        Atomic(
            Integer(
                5,
            ),
        ),
    ),
)
