xee-xpath/src/interpreter/snapshots/xee_xpath__interpreter__ir_interpret__tests__function_closure_nested.snap
---
source: xee-xpath/src/interpreter/ir_interpret.rs
expression: "run(\"function() { let $x := 3 return function() { let $y := 4 return function() { $x + $y }} }()()()\")"
---
Ok(
    Item(
        Atomic(
            Integer(
                7,
            ),
        ),
    ),
)
