xee-xpath/src/interpreter/snapshots/xee_xpath__interpreter__ir_interpret__tests__function_closure_with_multiple_variables.snap
---
source: xee-xpath/src/interpreter/ir_interpret.rs
expression: "run(\"function() { let $x := 3, $y := 1 return function() { $x - $y } }()()\")"
---
Ok(
    One(
        Atomic(
            Integer(
                2,
            ),
        ),
    ),
)
