xee-xpath/src/interpreter/snapshots/xee_xpath__interpreter__ir_interpret__tests__function_closure_with_multiple_variables_arguments.snap
---
source: xee-xpath/src/interpreter/ir_interpret.rs
expression: "run(\"function() { let $x := 3 return function($y) { $x - $y } }()(1)\")"
---
Ok(
    One(
        Atomic(
            Integer(
                Integer,
                2,
            ),
        ),
    ),
)
