xee-xpath/src/interpreter/snapshots/xee_xpath__interpreter__ir_interpret__tests__function_nested.snap
---
source: xee-xpath/src/interpreter/ir_interpret.rs
expression: "run(\"function($x) { function($y) { $y + 2 }($x + 1) } (5)\")"
---
Ok(
    One(
        Atomic(
            Integer(
                Integer,
                8,
            ),
        ),
    ),
)
