xee-xpath/src/interpreter/snapshots/xee_xpath__interpreter__ir_interpret__tests__generate_id.snap
---
source: xee-xpath/src/interpreter/ir_interpret.rs
expression: "run_xml(r#\"<doc><a/><b/><c/></doc>\"#, \"generate-id(doc/a)\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                String(
                    "id_0_2",
                ),
            ),
        ),
    },
)
