xee-xpath/src/interpreter/snapshots/xee_xpath__interpreter__ir_interpret__tests__if.snap
---
source: xee-xpath/src/interpreter/ir_interpret.rs
expression: "run(\"if (1) then 2 else 3\")"
---
Ok(
    One(
        Atomic(
            Integer(
                Integer,
                2,
            ),
        ),
    ),
)
