xee-xpath/src/interpreter/snapshots/xee_xpath__interpreter__ir_interpret__tests__if_false.snap
---
source: xee-xpath/src/interpreter/ir_interpret.rs
expression: "run(\"if (0) then 2 else 3\")"
---
Ok(
    One(
        Atomic(
            Integer(
                3,
            ),
        ),
    ),
)
